# omega-engine

./: .clinerules  .coverage  .env.example  .gitignore  .sovereign_seal  AGENTS.md  BLUEPRINT_CURATION_PIPELINE.md  CONTRIBUTING.md  Dockerfile.belial  Dockerfile.iris  GEMINI.md  GNOSIS_BUFFER_PROTOCOL.md  HANDOFF_OPENCODE.md  HANDOFF_PHASE_1B.md  LICENSE  Makefile  OMEGA_ENGINE.md  ORACLE_STACK.md  README.md  RECLAIMED_VISION.md  SOVEREIGN_MANDATES.md  config_files.txt  mkdocs.yml  opencode.json  pyproject.toml  requirements.txt  start_omega.sh  strategic_state.md  temp_engine.py  temp_evolution.md  temp_protocol.md  temp_vol6.md
.firecrawl/: all_scraped_markdown.md  claude_ai_projects.json  claude_codebases.json  claude_docs.json  claude_hacks.json  claude_instructions.json  claude_memory.json  claude_proj_tips.json  claude_projects_instructions.json  claude_projects_specific.json  claude_prompts.json  claude_sys_prompt.json  hf_agents_cli.md  hf_buckets_best.json  hf_cli_ref.md  hf_community_search.json  hf_jobs_adv.json  hf_mcp.md  hf_skills_community.json  podman_keepid.json  podman_networking.json  podman_quadlets.json  podman_tools.json  podman_volumes.json  verify_keepid.json  verify_pasta.json  verify_uflag.json  verify_userdir.json  verify_zflag.json  web_codebases.json  web_instr.json  web_memory.json
.gemini/: settings.json
.github/: copilot-instructions.md
.opencode/: MANIFEST.md
archives/: README.md  gnosis-analyst.md  researcher_analyst.md  researcher_auditor.md  researcher_creative.md  researcher_educator.md  researcher_explorer.md  researcher_historian.md  researcher_optimizer.md  researcher_skeptic.md  researcher_strategist.md  researcher_synthesizer.md  sovereign-expert.md
config/: distiller_prompts.yaml  entities.yaml  glossary.md  hierarchy.yaml  mcp_servers.json  models.yaml  omega.yaml  providers.yaml  research_topics.yaml
data/: session_gnosis.md
docs/: INDEX.md  MASTER_LEDGER.md  (+5 more)
(+767 files in other folders)
