[project]
name = "omega"
version = "2.0.0"
description = "🔱 Omega Engine — Reclaimed Vision. Local-first, sovereign, high-performance RAG."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    # Async runtime
    "anyio==4.13.0",
    "httpx==0.28.1",
    # Config & serialization
    "pyyaml==6.0.3",
    "pydantic==2.13.4",
    # Embeddings & vector store (CPU-optimized)
    "qdrant-client==1.17.1",
    "fastembed==0.6.0",
    # Redis (sessions, cache, streams)
    "redis>=7.0.0,<8.0.0",
    # Document parsing
    "markdown==3.7.0",
    "beautifulsoup4==4.14.3",
    # Monitoring
    "prometheus-client==0.25.0",
    "psutil==7.2.2",
    "tenacity==8.5.0",
    "aiosqlite==0.22.1",
    # MCP (Model Context Protocol) servers
    "fastmcp==3.2.0",
    "python-multipart==0.0.28", # For FastAPI form data handling
    "nest_asyncio==1.6.0", # For better async loop management
    "apscheduler==3.10.4", # For background scheduled tasks
]

[project.optional-dependencies]
cli = [
    "typer==0.25.1",
    "rich==15.0.0",
    "shellingham==1.5.4",
    "prompt_toolkit>=3.0.43,<4.0.0",
]
nova = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
]
voice = [
    "faster-whisper==1.1.0",
    "piper-tts==1.2.0",
]
all = [
    "omega[cli,nova,voice]",
]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=1.3.0",
    "flake8>=7.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[project.scripts]
omega = "omega.cli.oracle_cli:main"

[tool.pytest.ini_options]
addopts = "-x -v --no-header"
testpaths = ["tests"]
anyio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=78.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"
